--- a/index.html
+++ b/index.html
@@ -162,6 +162,20 @@
                 <a>Amazon Science</a>
             </ul>
         </div>
+        <div class="foot-panel3">
+            <div class="logo2">
+            </div>
+        </div>
+        <div class="foot-panel4">
+            <div class="pages">
+                <a>Conditions of Use</a>
+                <a>Privacy Notice</a>
+                <a>Your Ads Privacy Choices</a>
+            </div>
+            <div class="copyright">
+                © 1996-2025, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
     </footer>
 </body>
 </html>
